--- a/style.css
+++ b/style.css
@@ -9,3 +9,11 @@ body {
   background-color: darkblue;
   color: white;
 }
+
+header {
+  padding: 15px;
+  text-align: center;
+  border-bottom: 5px solid white;
+  font-weight: bold;
+  font-size: 32px;
+}
