--- a/style.css
+++ b/style.css
@@ -17,3 +17,24 @@ header {
   font-weight: bold;
   font-size: 32px;
 }
+
+.postsWrapper {
+  padding: 15px;
+
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+}
+
+.post {
+  height: 300px;
+  width: 300px;
+  border: 2px solid white;
+  overflow: hidden;
+}
+
+.post img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+}
